# moomoo-mcp

./: .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
proto/: Qot_GetSubInfo.proto  Qot_Sub.proto
src/: config.rs  lib.rs  main.rs  opend.rs  opend_cmd.rs  proto.rs  server.rs
