[package]
name = "moomoo-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
cbc = { version = "0.1.2", features = ["alloc", "block-padding"] }
encoding_rs = "0.8.35"
hex = "0.4.3"
md5 = "0.8.0"
once_cell = "1.21.3"
prost = "0.14.1"
prost-reflect = { version = "0.16.3", features = ["serde"] }
rmcp = { version = "1.2.0", features = ["transport-io"] }
rsa = { version = "0.9.8", features = ["pem"] }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3.2.0"
